--- a/data/css/custom.css
+++ b/data/css/custom.css
@@ -3,131 +3,131 @@
    -------------------------------------------------------------------------- */
 
 #menu .pure-menu-heading {
-    font-size: 100%;
-    padding: .5em .5em;
-    white-space: normal;
-    text-transform: initial;
+  font-size: 100%;
+  padding: 0.5em 0.5em;
+  white-space: normal;
+  text-transform: initial;
 }
 
 .pure-g {
-    margin-bottom: 0;
+  margin-bottom: 0;
 }
 
 .pure-form legend {
-    font-weight: bold;
-    letter-spacing: 0;
-    margin: 10px 0 1em 0;
+  font-weight: bold;
+  letter-spacing: 0;
+  margin: 10px 0 1em 0;
 }
 
 .pure-form .pure-g > label {
-    margin: .4em 0 .2em;
+  margin: 0.4em 0 0.2em;
 }
 
 .pure-form input {
-    margin-bottom: 10px;
+  margin-bottom: 10px;
 }
 
-.pure-form input[type=text][disabled] {
-    color: #777777;
+.pure-form input[type="text"][disabled] {
+  color: #777777;
 }
 
 @media screen and (max-width: 32em) {
-    .header > h1 {
-        line-height: 100%;
-        font-size: 2em;
-    }
+  .header > h1 {
+    line-height: 100%;
+    font-size: 2em;
+  }
 }
 
 h2 {
-    font-size: 1em;
+  font-size: 1em;
 }
 
-.panel  {
-    display: none;
+.panel {
+  display: none;
 }
 
 .block {
-    display: block;
+  display: block;
 }
 
 .page {
-    margin-top: 10px;
+  margin-top: 10px;
 }
 
 .hint {
-    color: #ccc;
-    font-size: 80%;
-    margin: -10px 0 10px 0;
+  color: #ccc;
+  font-size: 80%;
+  margin: -10px 0 10px 0;
 }
 
 .hint a {
-    color:inherit;
+  color: inherit;
 }
 
 legend.module,
 .module {
-    display: none;
+  display: none;
 }
 
 .template {
-    display: none;
+  display: none;
 }
 
-input[name=upgrade] {
-    display: none;
+input[name="upgrade"] {
+  display: none;
 }
 
 select {
-    margin-bottom: 10px;
-    width: 100%;
+  margin-bottom: 10px;
+  width: 100%;
 }
 
 input.center {
-    margin-bottom: 0;
+  margin-bottom: 0;
 }
 
 div.center {
-    margin: .5em 0 1em;
+  margin: 0.5em 0 1em;
 }
 
 .webmode {
-    display: none;
+  display: none;
 }
 
 #password .content {
-    margin: 0 auto;
+  margin: 0 auto;
 }
 
 #layout .content {
-    margin: 0;
+  margin: 0;
 }
 
 div.state {
-    border-top: 1px solid #eee;
-    margin-top: 20px;
-    padding-top: 30px;
+  border-top: 1px solid #eee;
+  margin-top: 20px;
+  padding-top: 30px;
 }
 
 .state div {
-    font-size: 80%;
+  font-size: 80%;
 }
 
 .state span {
-    font-size: 80%;
-    font-weight: bold;
+  font-size: 80%;
+  font-weight: bold;
 }
 
 .right {
-    text-align: right;
+  text-align: right;
 }
 
 .pure-g span.terminal,
 .pure-g textarea.terminal {
-    font-family: 'Courier New', monospace;
-    font-size: 80%;
-    line-height: 100%;
-    background-color: #000;
-    color: #0F0;
+  font-family: "Courier New", monospace;
+  font-size: 80%;
+  line-height: 100%;
+  background-color: #000;
+  color: #0f0;
 }
 
 /* -----------------------------------------------------------------------------
@@ -137,24 +137,23 @@ div.state {
 /* removeIf(!curtain) */
 
 .curtain-div {
-    text-align: center;
+  text-align: center;
 }
 
 .curtain-roller {
-    width: 300px;
-    height: 200px;
-    display: inline-block;
+  width: 300px;
+  height: 200px;
+  display: inline-block;
 }
 
-.curtain-button{
-    margin-left: 10px;
-    margin-right: 10px;
-    text-align: center;
-
+.curtain-button {
+  margin-left: 10px;
+  margin-right: 10px;
+  text-align: center;
 }
 
 .reverse-range {
-    direction: rtl;
+  direction: rtl;
 }
 
 /* endRemoveIf(!curtain) */
@@ -164,23 +163,23 @@ div.state {
    -------------------------------------------------------------------------- */
 
 .pure-button {
-    border-radius: 4px;
-    color: white;
-    letter-spacing: 0;
-    margin-bottom: 10px;
-    text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
-    padding: 8px 8px;
+  border-radius: 4px;
+  color: white;
+  letter-spacing: 0;
+  margin-bottom: 10px;
+  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
+  padding: 8px 8px;
 }
 
 .main-buttons {
-    margin: 20px auto;
-    text-align: center;
+  margin: 20px auto;
+  text-align: center;
 }
 .main-buttons button {
-    width: 100px;
+  width: 100px;
 }
 .button-del-schedule {
-    margin-top: 15px;
+  margin-top: 15px;
 }
 
 .button-reboot,
@@ -197,7 +196,7 @@ div.state {
 .button-clear-messages,
 .button-clear-counts,
 .button-settings-factory {
-    background: rgb(192, 0, 0); /* redish */
+  background: rgb(192, 0, 0); /* redish */
 }
 
 .button-update,
@@ -216,28 +215,28 @@ div.state {
 .button-garland-set-default,
 .button-dbgcmd,
 .button-apikey {
-    background: rgb(0, 192, 0); /* green */
+  background: rgb(0, 192, 0); /* green */
 }
 
 .button-add-switch-schedule,
 .button-add-light-schedule,
 .button-add-curtain-schedule {
-    background: rgb(0, 192, 0); /* green */
-    display: none;
+  background: rgb(0, 192, 0); /* green */
+  display: none;
 }
 
 #button-wifi-scan,
 .button-more-network,
 .button-more-schedule,
 .button-rfb-send {
-    background: rgb(255, 128, 0); /* orange */
+  background: rgb(255, 128, 0); /* orange */
 }
 
 .button-curtain-open,
 .button-curtain-pause,
 .button-curtain-close,
 .button-generate-password {
-    background: rgb(66, 184, 221); /* blue */
+  background: rgb(66, 184, 221); /* blue */
 }
 
 .button-upgrade-browse,
@@ -248,11 +247,11 @@ div.state {
 .button-ha-add,
 .button-apikey,
 .button-upgrade {
-    margin-left: 5px;
+  margin-left: 5px;
 }
 
 .button-thermostat-reset-counters {
-    background: rgb(204, 139, 41);
+  background: rgb(204, 139, 41);
 }
 
 /* -----------------------------------------------------------------------------
@@ -260,14 +259,14 @@ div.state {
    -------------------------------------------------------------------------- */
 
 input.slider {
-    margin-top: 10px;
+  margin-top: 10px;
 }
 
 span.slider {
-    font-size: 70%;
-    letter-spacing: 0;
-    margin-left: 10px;
-    margin-top: 7px;
+  font-size: 70%;
+  letter-spacing: 0;
+  margin-left: 10px;
+  margin-top: 7px;
 }
 
 /* -----------------------------------------------------------------------------
@@ -275,106 +274,106 @@ span.slider {
    -------------------------------------------------------------------------- */
 
 .toggleWrapper {
-    overflow: hidden;
-    width: auto;
-    height: 30px;
-    margin: 0px 0px 10px 0px;
-    padding: 0px;
-    border-radius: 4px;
-    box-shadow: inset 1px 1px #CCC;
+  overflow: hidden;
+  width: auto;
+  height: 30px;
+  margin: 0px 0px 10px 0px;
+  padding: 0px;
+  border-radius: 4px;
+  box-shadow: inset 1px 1px #ccc;
 }
 .toggleWrapper input {
-    position: absolute;
-    left: -99em;
+  position: absolute;
+  left: -99em;
 }
 label[for].toggle {
-    margin: 0px;
-    padding: 0px;
+  margin: 0px;
+  padding: 0px;
 }
 .toggle {
-    letter-spacing:normal;
-    cursor: pointer;
-    display: inline-block;
-    position: relative;
-    width: 130px;
-    height: 100%;
-    background: #e9e9e9;
-    color: #a9a9a9;
-    border-radius: 4px;
-    -webkit-transition: all 200ms cubic-bezier(0.445, 0.05, 0.55, 0.95);
-    transition: all 200ms cubic-bezier(0.445, 0.05, 0.55, 0.95);
+  letter-spacing: normal;
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  width: 130px;
+  height: 100%;
+  background: #e9e9e9;
+  color: #a9a9a9;
+  border-radius: 4px;
+  -webkit-transition: all 200ms cubic-bezier(0.445, 0.05, 0.55, 0.95);
+  transition: all 200ms cubic-bezier(0.445, 0.05, 0.55, 0.95);
 }
 .toggle:before,
 .toggle:after {
-    position: absolute;
-    line-height: 30px;
-    font-size: .7em;
-    z-index: 2;
-    -webkit-transition: all 200ms cubic-bezier(0.445, 0.05, 0.55, 0.95);
-    transition: all 200ms cubic-bezier(0.445, 0.05, 0.55, 0.95);
+  position: absolute;
+  line-height: 30px;
+  font-size: 0.7em;
+  z-index: 2;
+  -webkit-transition: all 200ms cubic-bezier(0.445, 0.05, 0.55, 0.95);
+  transition: all 200ms cubic-bezier(0.445, 0.05, 0.55, 0.95);
 }
 .toggle:before {
-    content: "NO";
-    left: 20px;
+  content: "NO";
+  left: 20px;
 }
 input[name="relay"] + .toggle:before {
-    content: "OFF";
+  content: "OFF";
 }
 input[name="thermostatMode"] + .toggle:before {
-    content: "Heater";
+  content: "Heater";
 }
-.toggle:after{
-    content: "YES";
-    right: 20px;
+.toggle:after {
+  content: "YES";
+  right: 20px;
 }
 input[name="relay"] + .toggle:after {
-    content: "ON";
+  content: "ON";
 }
 input[name="thermostatMode"] + .toggle:after {
-    content: "Cooler";
+  content: "Cooler";
 }
 .toggle__handler {
-    display: inline-block;
-    position: relative;
-    z-index: 1;
-    background: #c00000;
-    width: 50%;
-    height: 100%;
-    border-radius: 4px;
-    border-top-right-radius: 0px;
-    border-bottom-right-radius: 0px;
-    top: 0px;
-    left: 0px;
-    -webkit-transition: all 200ms cubic-bezier(0.445, 0.05, 0.55, 0.95);
-    transition: all 200ms cubic-bezier(0.445, 0.05, 0.55, 0.95);
-    -webkit-transform: translateX(0px);
-    transform: translateX(0px);
+  display: inline-block;
+  position: relative;
+  z-index: 1;
+  background: #c00000;
+  width: 50%;
+  height: 100%;
+  border-radius: 4px;
+  border-top-right-radius: 0px;
+  border-bottom-right-radius: 0px;
+  top: 0px;
+  left: 0px;
+  -webkit-transition: all 200ms cubic-bezier(0.445, 0.05, 0.55, 0.95);
+  transition: all 200ms cubic-bezier(0.445, 0.05, 0.55, 0.95);
+  -webkit-transform: translateX(0px);
+  transform: translateX(0px);
 }
 input:checked + .toggle:after {
-    color: #fff;
+  color: #fff;
 }
 input:checked + .toggle:before {
-    color: #a9a9a9;
+  color: #a9a9a9;
 }
 input + .toggle:before {
-    color: #fff;
+  color: #fff;
 }
 input:checked + .toggle .toggle__handler {
-    width: 50%;
-    background: #00c000;
-    -webkit-transform: translateX(65px);
-    transform: translateX(65px);
-    border-color: #000;
-    border-top-left-radius: 0px;
-    border-bottom-left-radius: 0px;
-    border-top-right-radius: 4px;
-    border-bottom-right-radius: 4px;
+  width: 50%;
+  background: #00c000;
+  -webkit-transform: translateX(65px);
+  transform: translateX(65px);
+  border-color: #000;
+  border-top-left-radius: 0px;
+  border-bottom-left-radius: 0px;
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
 }
 input[name="thermostatMode"]:checked + .toggle .toggle__handler {
-    background: #00c0c0;
+  background: #00c0c0;
 }
 input[disabled] + .toggle .toggle__handler {
-    background: #ccc;
+  background: #ccc;
 }
 
 /* -----------------------------------------------------------------------------
@@ -382,10 +381,10 @@ input[disabled] + .toggle .toggle__handler {
    -------------------------------------------------------------------------- */
 
 .loading {
-    display: none;
-    height: 20px;
-    margin: 8px 0 0 10px;
-    width: 20px;
+  display: none;
+  height: 20px;
+  margin: 8px 0 0 10px;
+  width: 20px;
 }
 
 /* -----------------------------------------------------------------------------
@@ -393,18 +392,18 @@ input[disabled] + .toggle .toggle__handler {
    -------------------------------------------------------------------------- */
 
 #menu .small {
-    font-size: 60%;
-    padding-left: 9px;
+  font-size: 60%;
+  padding-left: 9px;
 }
 
 #menu div.footer {
-    color: #999;
-    font-size: 80%;
-    padding: 10px;
+  color: #999;
+  font-size: 80%;
+  padding: 10px;
 }
 #menu div.footer a {
-    padding: 0;
-    text-decoration: none;
+  padding: 0;
+  text-decoration: none;
 }
 
 /* -----------------------------------------------------------------------------
@@ -412,8 +411,8 @@ input[disabled] + .toggle .toggle__handler {
    -------------------------------------------------------------------------- */
 
 #color {
-    padding-bottom: 1em;
-    padding-top: 1em;
+  padding-bottom: 1em;
+  padding-top: 1em;
 }
 
 /* -----------------------------------------------------------------------------
@@ -421,20 +420,20 @@ input[disabled] + .toggle .toggle__handler {
    -------------------------------------------------------------------------- */
 
 #panel-rfb fieldset {
-    margin: 10px 2px;
-    padding: 20px;
+  margin: 10px 2px;
+  padding: 20px;
 }
 
 #panel-rfb input {
-    margin-right: 5px;
+  margin-right: 5px;
 }
 
 #panel-rfb label {
-    padding-top: 5px;
+  padding-top: 5px;
 }
 
 #panel-rfb input {
-    text-align: center;
+  text-align: center;
 }
 
 /* -----------------------------------------------------------------------------
@@ -442,15 +441,15 @@ input[disabled] + .toggle .toggle__handler {
    -------------------------------------------------------------------------- */
 
 #upgrade-progress {
-    display: none;
-    height: 20px;
-    margin-top: 10px;
-    width: 100%;
+  display: none;
+  height: 20px;
+  margin-top: 10px;
+  width: 100%;
 }
 
 #uploader,
 #downloader {
-    display: none;
+  display: none;
 }
 
 /* -----------------------------------------------------------------------------
@@ -459,20 +458,20 @@ input[disabled] + .toggle .toggle__handler {
 
 #networks .pure-g,
 #schedules .pure-g {
-    border-bottom: 1px solid #eee;
-    margin-bottom: 10px;
-    padding: 10px 0 10px 0;
+  border-bottom: 1px solid #eee;
+  margin-bottom: 10px;
+  padding: 10px 0 10px 0;
 }
 
 #networks .more {
-    display: none;
+  display: none;
 }
 
 #haConfig,
 #scanResult {
-    margin-top: 10px;
-    display: none;
-    padding: 10px;
+  margin-top: 10px;
+  display: none;
+  padding: 10px;
 }
 
 /* -----------------------------------------------------------------------------
@@ -480,19 +479,19 @@ input[disabled] + .toggle .toggle__handler {
    -------------------------------------------------------------------------- */
 
 .right {
-    text-align: right;
+  text-align: right;
 }
 
 table.dataTable.display tbody td {
-    text-align: center;
+  text-align: center;
 }
 
 #packets_filter {
-    display: none;
+  display: none;
 }
 
 .filtered {
-    color: rgb(202, 60, 60);
+  color: rgb(202, 60, 60);
 }
 
 /* -----------------------------------------------------------------------------
@@ -500,56 +499,56 @@ table.dataTable.display tbody td {
    -------------------------------------------------------------------------- */
 
 #weblog {
-    height: 400px;
-    margin-bottom: 10px;
+  height: 400px;
+  margin-bottom: 10px;
 }
 
 /* -----------------------------------------------------------------------------
     Password input controls
    -------------------------------------------------------------------------- */
 .password-reveal {
-    font-family: EmojiSymbols,Segoe UI Symbol;
-    background: rgba(0,0,0,0);
-    display: inline-block;
-    float: right;
-    z-index: 50;
-    margin-top: 6px;
-    margin-left: -30px;
-    vertical-align: middle;
-    font-size: 1.2em;
-    height: 100%;
+  font-family: EmojiSymbols, Segoe UI Symbol;
+  background: rgba(0, 0, 0, 0);
+  display: inline-block;
+  float: right;
+  z-index: 50;
+  margin-top: 6px;
+  margin-left: -30px;
+  vertical-align: middle;
+  font-size: 1.2em;
+  height: 100%;
 }
 
 .password-reveal:after {
-    content: "👁";
+  content: "👁";
 }
 
 input[type="password"] + .password-reveal {
-    color: rgba(205, 205, 205, 0.3);
+  color: rgba(205, 205, 205, 0.3);
 }
 
 input[type="text"] + .password-reveal {
-    color: rgba(66, 184, 221, 0.8);
+  color: rgba(66, 184, 221, 0.8);
 }
 
 .no-select {
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 input::-ms-clear,
 input::-ms-reveal {
-    display: none;
+  display: none;
 }
 
 /* css minifier must not combine these.
  * style will not apply otherwise */
 input::-ms-input-placeholder {
-    color: #ccd;
+  color: #ccd;
 }
 
 input::placeholder {
-    color: #ccc;
+  color: #ccc;
 }
